side by side overflow fix

--- a/Styles/theme.css
+++ b/Styles/theme.css
@@ -11158,17 +11158,9 @@ body {
   padding-top: 58px;
   overflow: hidden;
 }
-/*
-#zone-feature,
-#zone-subfeature,
-#zone-sectiona,
-#zone-sectionb
-#zone-sectionc
-#zone-sectiond,
-#zone-footer {
-    overflow-x: hidden;
+.section.side-by-side {
+  overflow: hidden;
 }
-*/
 @media (min-width: 992px) {
   body {
     margin-bottom: 0;
